added GET /theatres/{theatres-name} documentation
